{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 178,
  "lineage": "e61954e9-e48d-797d-7b28-626b881faa4f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9646",
                  "8089"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-28T05:12:23.807-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mosig-training/global/firewalls/online-boutique-allow-internal-ports",
            "log_config": [],
            "name": "online-boutique-allow-internal-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/mosig-training/global/networks/default",
            "priority": 1000,
            "project": "mosig-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mosig-training/global/firewalls/online-boutique-allow-internal-ports",
            "source_ranges": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-generator"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_load_generator",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-28T05:12:23.951-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mosig-training/global/firewalls/online-boutique-allow-ssh-load-generator",
            "log_config": [],
            "name": "online-boutique-allow-ssh-load-generator",
            "network": "https://www.googleapis.com/compute/v1/projects/mosig-training/global/networks/default",
            "priority": 1000,
            "project": "mosig-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mosig-training/global/firewalls/online-boutique-allow-ssh-load-generator",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-generator"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "load_generator",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20241219",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mosig-training/zones/europe-west6-b/disks/online-boutique-load-generator"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-12-28T05:20:35.409-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mosig-training/zones/europe-west6-b/instances/online-boutique-load-generator",
            "instance_id": "3120109227570513356",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "voB362gGqkQ=",
            "name": "online-boutique-load-generator",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.217.127",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mosig-training/global/networks/default",
                "network_ip": "10.172.15.199",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mosig-training/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "mosig-training"
              }
            ],
            "project": "mosig-training",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mosig-training/zones/europe-west6-b/instances/online-boutique-load-generator",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "load-generator"
            ],
            "tags_fingerprint": "iPw2rPChwHs=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west6-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_container_cluster.gke_autopilot",
            "google_container_cluster.gke_standard",
            "module.enable_google_apis.data.google_compute_default_service_account.default",
            "module.enable_google_apis.google_project_iam_member.project_service_identity_roles",
            "module.enable_google_apis.google_project_service.project_services",
            "module.enable_google_apis.google_project_service_identity.project_service_identities"
          ]
        }
      ]
    }
  ]
}